--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
             "request": "launch",
             "program":"${file}",
             "console": "integratedTerminal",
-            "python":"python3"
+            "python":"python3",
+            "justMyCode": false,
         },
         {
             "name": "PyTest",
