fix test without display

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,11 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
-      - run: |
-           docker build -f py.Dockerfile \
-             --build-arg MUJOCO_KEY=$MUJOCO_KEY \
-             --build-arg PYTHON_VERSION=${{ matrix.python-version }} \
-             --tag gym-docker .
-      - name: Run tests
-        run: docker run gym-docker pytest --forked
+      - run: make test
+      # - run: |
+      #      docker build -f py.Dockerfile \
+      #        --build-arg MUJOCO_KEY=$MUJOCO_KEY \
+      #        --build-arg PYTHON_VERSION=${{ matrix.python-version }} \
+      #        --tag gym-docker .
+      # - name: Run tests
+      #   run: docker run gym-docker pytest --forked
