--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
-      - run: apt-get install ffmpeg
+      - run: sudo apt-get install ffmpeg
       - run: make install && make test
       # - run: |
       #      docker build -f py.Dockerfile \
